--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ليزفار DZ — الصفحة الرئيسية</title>
 
-  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap');
@@ -21,31 +20,15 @@
     .chev { transition: transform .25s ease; }
     .chev.open { transform: rotate(-90deg); }
     select option { color: black; }
-
-    /* Carousel */
-    .carousel {
-      display: flex;
-      overflow-x: auto;
-      gap: 1rem;
-      scroll-behavior: smooth;
-      scrollbar-width: none;
-    }
+    .carousel { display: flex; gap: 1rem; overflow-x: auto; scroll-behavior: smooth; scrollbar-width: none; }
     .carousel::-webkit-scrollbar { display: none; }
-    .carousel-item {
-      flex: 0 0 250px;
-      background-color: rgba(255,255,255,0.1);
-      border-radius: 1rem;
-      overflow: hidden;
-      transition: transform 0.3s ease;
-    }
+    .carousel-item { flex: 0 0 250px; background-color: rgba(255, 255, 255, 0.1); border-radius: 1rem; overflow: hidden; transition: transform 0.3s ease; }
     .carousel-item:hover { transform: scale(1.05); }
-    .status-new { color: #22c55e; font-weight: 600; }
-    .status-used { color: #ef4444; font-weight: 600; }
   </style>
 </head>
 
 <body class="min-h-screen text-white bg-gradient-to-br from-gray-900 via-gray-800 to-black bg-tech">
-  <div class="min-h-screen flex flex-col lg:flex-row">
+  <div class="min-h-screen flex">
 
     <!-- Sidebar -->
     <aside class="w-72 bg-gray-900/70 border-r border-white/5 p-4 hidden lg:block">
@@ -60,7 +43,6 @@
       <!-- Navigation -->
       <nav class="space-y-2 overflow-auto" style="max-height:calc(100vh - 160px);">
         <button data-filter="all" class="w-full text-right side-item px-3 py-2 rounded-md text-sm font-medium">أحدث المنتجات</button>
-
         <!-- PC -->
         <div>
           <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium pc-toggle">
@@ -129,24 +111,33 @@
       <!-- Header -->
       <header class="flex items-center justify-between mb-8">
         <h1 class="text-xl font-semibold">مرحبا بك في Lizfar DZ</h1>
-        <div class="flex items-center gap-3">
-          <a href="signup.html" class="px-4 py-2 rounded-full bg-yellow-400 text-black font-semibold">إنشاء حساب</a>
-          <a href="login.html" class="px-4 py-2 rounded-full bg-white/6">تسجيل الدخول</a>
+        <div class="flex items-center gap-3" id="authSection">
+          <a href="signup.html" class="px-4 py-2 rounded-full bg-yellow-400 text-black font-semibold" id="signupBtn">إنشاء حساب</a>
+          <a href="login.html" class="px-4 py-2 rounded-full bg-white/6" id="loginBtn">تسجيل الدخول</a>
+
+          <div class="relative hidden" id="userMenu">
+            <button id="userBtn" class="flex items-center gap-2 rounded-full bg-white/10 px-3 py-1 hover:bg-white/20 transition">
+              <img src="./assets/default-avatar.png" alt="User" class="w-8 h-8 rounded-full object-cover" id="userAvatar">
+              <span id="userName" class="text-sm font-medium"></span>
+            </button>
+            <div class="absolute right-0 mt-2 w-40 bg-gray-900/90 rounded-lg shadow-lg hidden" id="userDropdown">
+              <a href="profile.html" class="block px-4 py-2 hover:bg-gray-800">الملف الشخصي</a>
+              <button id="logoutBtn" class="w-full text-left px-4 py-2 hover:bg-gray-800">تسجيل الخروج</button>
+            </div>
+          </div>
         </div>
       </header>
 
-      <!-- Featured Products Carousel -->
-      <section class="mb-8">
-        <h2 class="text-2xl font-semibold mb-4">منتجات مختارة</h2>
+      <!-- منتجات مختارة -->
+      <section class="mb-12">
+        <h2 class="text-2xl font-semibold mb-4">⭐ منتجات مختارة</h2>
         <div id="featuredCarousel" class="carousel"></div>
       </section>
 
-      <!-- Offers Section -->
+      <!-- عروض اليوم -->
       <section>
-        <h2 class="text-2xl font-semibold mb-4">🔥 عروض اليوم</h2>
-        <div id="offersSection" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-          <!-- المنتجات ستتم إضافتها هنا من Firebase -->
-        </div>
+        <h2 class="text-2xl font-semibold mb-6">🔥 عروض اليوم</h2>
+        <div id="offers" class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"></div>
       </section>
 
       <footer class="text-xs text-gray-400 mt-12">
@@ -155,98 +146,13 @@
     </main>
   </div>
 
-  <!-- Firebase + Scripts -->
+  <!-- Firebase + وظائف -->
   <script type="module">
     import { auth, db } from "./firebase-config.js";
-    import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
     import { collection, getDocs } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
+    import { onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
 
-    const featuredCarousel = document.getElementById("featuredCarousel");
-    const offersSection = document.getElementById("offersSection");
-
-    // 🔒 تأكيد تسجيل الدخول (عرض المحتوى حسب الحالة)
-    onAuthStateChanged(auth, (user) => {
-      if (!user) {
-        console.log("المستخدم غير مسجل الدخول");
-        // يمكن عرض زر تسجيل الدخول فقط
-      } else {
-        console.log("المستخدم مسجل الدخول: " + user.email);
-      }
-    });
-
-    // تحميل المنتجات المعتمدة
-    async function loadProducts() {
-      try {
-        const snapshot = await getDocs(collection(db, "approved_products"));
-
-        if (snapshot.empty) {
-          offersSection.innerHTML = "<p class='text-center text-gray-400 col-span-full'>لا توجد عروض حالياً.</p>";
-          return;
-        }
-
-        featuredCarousel.innerHTML = "";
-        offersSection.innerHTML = "";
-
-        snapshot.forEach((docSnap, i) => {
-          const p = docSnap.data();
-          const statusText = p.condition === "new"
-            ? `<span class='status-new'>(جديد)</span>`
-            : `<span class='status-used'>(مستعمل - ${p.usageDuration || "غير محدد"})</span>`;
-          const ratingStars = "⭐".repeat(p.rating || 4);
-
-          // بطاقة العرض في عروض اليوم
-          const card = `
-            <div class="bg-white/10 rounded-2xl overflow-hidden shadow-lg hover:scale-105 transition transform">
-              <img src="${p.image1 || './assets/default-product.jpg'}" alt="${p.name}" class="w-full h-48 object-cover">
-              <div class="p-4">
-                <h3 class="text-lg font-semibold mb-1 flex items-center">${p.name} ${statusText}</h3>
-                <p class="text-sm text-gray-300 mb-2 truncate">${p.desc}</p>
-                <div class="flex items-center justify-between">
-                  <span class="text-yellow-400 font-bold">${p.price} دج</span>
-                  <span class="text-sm">${ratingStars}</span>
-                </div>
-                <a href="https://wa.me/${p.whatsapp}" target="_blank"
-                   class="block mt-3 text-center bg-green-500 hover:bg-green-600 text-white py-2 rounded-lg transition">
-                   💬 تواصل عبر واتساب
-                </a>
-              </div>
-            </div>
-          `;
-          offersSection.insertAdjacentHTML("beforeend", card);
-
-          // إضافة أول 6 منتجات للسلايدر
-          if (i < 6) {
-            featuredCarousel.insertAdjacentHTML("beforeend", `
-              <div class="carousel-item">
-                <img src="${p.image1 || './assets/default-product.jpg'}" class="w-full h-40 object-cover" alt="${p.name}">
-                <div class="p-3">
-                  <h3 class="text-sm font-semibold mb-1">${p.name} ${statusText}</h3>
-                  <p class="text-yellow-400 font-bold">${p.price} دج</p>
-                </div>
-              </div>
-            `);
-          }
-        });
-      } catch (err) {
-        console.error("خطأ في تحميل المنتجات: ", err);
-      }
-    }
-
-    // 🔁 حركة تلقائية للسلايدر
-    function autoScrollCarousel() {
-      const scrollAmount = 1;
-      setInterval(() => {
-        featuredCarousel.scrollLeft += scrollAmount;
-        if (featuredCarousel.scrollLeft >= featuredCarousel.scrollWidth - featuredCarousel.clientWidth) {
-          featuredCarousel.scrollLeft = 0;
-        }
-      }, 30);
-    }
-
-    await loadProducts();
-    autoScrollCarousel();
-
-    // تفعيل القوائم الفرعية
+    // Sidebar toggle
     const toggle = (btnClass, subClass) => {
       const btn = document.querySelector(btnClass);
       const sub = document.querySelector(subClass);
@@ -259,6 +165,105 @@
     toggle('.pc-toggle', '.pc-submenu');
     toggle('.phone-toggle', '.phone-submenu');
     toggle('.acc-toggle', '.acc-submenu');
+
+    // Auth elements
+    const signupBtn = document.getElementById("signupBtn");
+    const loginBtn = document.getElementById("loginBtn");
+    const userMenu = document.getElementById("userMenu");
+    const userBtn = document.getElementById("userBtn");
+    const userDropdown = document.getElementById("userDropdown");
+    const userName = document.getElementById("userName");
+    const userAvatar = document.getElementById("userAvatar");
+    const logoutBtn = document.getElementById("logoutBtn");
+
+    // التحقق من تسجيل الدخول
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        signupBtn.classList.add("hidden");
+        loginBtn.classList.add("hidden");
+        userMenu.classList.remove("hidden");
+        userName.textContent = user.displayName || user.email.split("@")[0];
+        userAvatar.src = user.photoURL || "./assets/default-avatar.png";
+      } else {
+        signupBtn.classList.remove("hidden");
+        loginBtn.classList.remove("hidden");
+        userMenu.classList.add("hidden");
+      }
+    });
+
+    // Dropdown user
+    userBtn.addEventListener("click", () => userDropdown.classList.toggle("hidden"));
+
+    // Logout
+    logoutBtn.addEventListener("click", async () => {
+      await signOut(auth);
+      userDropdown.classList.add("hidden");
+      alert("تم تسجيل الخروج بنجاح!");
+    });
+
+    // تحميل المنتجات
+    const offersSection = document.getElementById("offers");
+    const featuredCarousel = document.getElementById("featuredCarousel");
+
+    async function loadProducts() {
+      const snapshot = await getDocs(collection(db, "approved_products"));
+      offersSection.innerHTML = "";
+      featuredCarousel.innerHTML = "";
+      if (snapshot.empty) {
+        offersSection.innerHTML = "<p class='text-center text-gray-400 col-span-full'>لا توجد عروض حالياً.</p>";
+        return;
+      }
+      snapshot.forEach((docSnap, i) => {
+        const p = docSnap.data();
+        const statusText = p.condition === "new"
+          ? `<span class='status-new'>(جديد)</span>`
+          : `<span class='status-used'>(مستعمل - ${p.usageDuration})</span>`;
+        const ratingStars = "⭐".repeat(p.rating || 4);
+
+        const card = `
+          <div class="bg-white/10 rounded-2xl overflow-hidden shadow-lg hover:scale-105 transition transform">
+            <img src="${p.image1 || './assets/default-product.jpg'}" alt="${p.name}" class="w-full h-48 object-cover">
+            <div class="p-4">
+              <h3 class="text-lg font-semibold mb-1 flex items-center">${p.name} ${statusText}</h3>
+              <p class="text-sm text-gray-300 mb-2 truncate">${p.desc}</p>
+              <div class="flex items-center justify-between">
+                <span class="text-yellow-400 font-bold">${p.price} دج</span>
+                <span class="text-sm">${ratingStars}</span>
+              </div>
+              <a href="https://wa.me/${p.whatsapp}" target="_blank"
+                 class="block mt-3 text-center bg-green-500 hover:bg-green-600 text-white py-2 rounded-lg transition">
+                 💬 تواصل عبر واتساب
+              </a>
+            </div>
+          </div>`;
+        offersSection.insertAdjacentHTML("beforeend", card);
+
+        if (i < 6) {
+          featuredCarousel.insertAdjacentHTML("beforeend", `
+            <div class="carousel-item">
+              <img src="${p.image1 || './assets/default-product.jpg'}" class="w-full h-40 object-cover" alt="${p.name}">
+              <div class="p-3">
+                <h3 class="text-sm font-semibold mb-1">${p.name} ${statusText}</h3>
+                <p class="text-yellow-400 font-bold">${p.price} دج</p>
+              </div>
+            </div>
+          `);
+        }
+      });
+    }
+
+    function autoScrollCarousel() {
+      const scrollAmount = 1;
+      setInterval(() => {
+        featuredCarousel.scrollLeft += scrollAmount;
+        if (featuredCarousel.scrollLeft >= featuredCarousel.scrollWidth - featuredCarousel.clientWidth) {
+          featuredCarousel.scrollLeft = 0;
+        }
+      }, 30);
+    }
+
+    await loadProducts();
+    autoScrollCarousel();
   </script>
 </body>
 </html>
