--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+    <!doctype html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ليزفار DZ — الصفحة الرئيسية</title>
 
+  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap');
@@ -20,10 +21,6 @@
     .chev { transition: transform .25s ease; }
     .chev.open { transform: rotate(-90deg); }
     select option { color: black; }
-    .carousel { display: flex; gap: 1rem; overflow-x: auto; scroll-behavior: smooth; scrollbar-width: none; }
-    .carousel::-webkit-scrollbar { display: none; }
-    .carousel-item { flex: 0 0 250px; background-color: rgba(255, 255, 255, 0.1); border-radius: 1rem; overflow: hidden; transition: transform 0.3s ease; }
-    .carousel-item:hover { transform: scale(1.05); }
   </style>
 </head>
 
@@ -43,6 +40,7 @@
       <!-- Navigation -->
       <nav class="space-y-2 overflow-auto" style="max-height:calc(100vh - 160px);">
         <button data-filter="all" class="w-full text-right side-item px-3 py-2 rounded-md text-sm font-medium">أحدث المنتجات</button>
+
         <!-- PC -->
         <div>
           <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium pc-toggle">
@@ -108,36 +106,65 @@
 
     <!-- Main -->
     <main class="flex-1 p-6 lg:pl-8">
-      <!-- Header -->
-      <header class="flex items-center justify-between mb-8">
-        <h1 class="text-xl font-semibold">مرحبا بك في Lizfar DZ</h1>
-        <div class="flex items-center gap-3" id="authSection">
-          <a href="signup.html" class="px-4 py-2 rounded-full bg-yellow-400 text-black font-semibold" id="signupBtn">إنشاء حساب</a>
-          <a href="login.html" class="px-4 py-2 rounded-full bg-white/6" id="loginBtn">تسجيل الدخول</a>
-
-          <div class="relative hidden" id="userMenu">
+      <!-- Header مع بحث -->
+      <header class="flex flex-col sm:flex-row sm:items-center justify-between mb-8 gap-4">
+        <div class="flex items-center gap-3">
+          <!-- User/Auth -->
+          <div class="relative" id="userMenu">
             <button id="userBtn" class="flex items-center gap-2 rounded-full bg-white/10 px-3 py-1 hover:bg-white/20 transition">
               <img src="./assets/default-avatar.png" alt="User" class="w-8 h-8 rounded-full object-cover" id="userAvatar">
-              <span id="userName" class="text-sm font-medium"></span>
+              <span id="userNameHeader" class="text-sm font-medium"></span>
             </button>
-            <div class="absolute right-0 mt-2 w-40 bg-gray-900/90 rounded-lg shadow-lg hidden" id="userDropdown">
+            <div class="absolute left-0 mt-2 w-40 bg-gray-900/90 rounded-lg shadow-lg hidden" id="userDropdown">
               <a href="profile.html" class="block px-4 py-2 hover:bg-gray-800">الملف الشخصي</a>
               <button id="logoutBtn" class="w-full text-left px-4 py-2 hover:bg-gray-800">تسجيل الخروج</button>
             </div>
           </div>
+
+          <div id="authBtns" class="flex gap-3">
+            <a href="signup.html" class="px-4 py-2 rounded-full bg-yellow-400 text-black font-semibold" id="signupBtn">إنشاء حساب</a>
+            <a href="login.html" class="px-4 py-2 rounded-full bg-white/6" id="loginBtn">تسجيل الدخول</a>
+          </div>
+        </div>
+
+        <!-- Search + Filters -->
+        <div class="flex-1 max-w-xl sm:ml-4 flex flex-col sm:flex-row gap-2">
+          <input type="text" id="searchInput" placeholder="ابحث عن منتج أو فئة..."
+                 class="flex-1 px-4 py-2 rounded-lg bg-white/10 text-white placeholder-white/70 focus:outline-none focus:ring-2 focus:ring-yellow-400 transition">
+
+          <select id="categoryFilter" class="px-3 py-2 rounded-lg bg-white/10 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+            <option value="">كل الفئات</option>
+            <option value="pc-builds">تجميعات PC</option>
+            <option value="pc-gpu">كروت شاشة</option>
+            <option value="pc-cpu">معالجات</option>
+            <option value="laptop">Laptop</option>
+            <option value="phone-samsung">Samsung</option>
+            <option value="phone-xiaomi">Xiaomi</option>
+            <option value="phone-iphone">iPhone</option>
+            <option value="acc-mouse">فأرة</option>
+            <option value="screens">شاشات</option>
+          </select>
+
+          <select id="conditionFilter" class="px-3 py-2 rounded-lg bg-white/10 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+            <option value="">الحالة</option>
+            <option value="new">جديد</option>
+            <option value="used">مستعمل</option>
+          </select>
+
+          <select id="priceFilter" class="px-3 py-2 rounded-lg bg-white/10 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+            <option value="">السعر</option>
+            <option value="0-50000">0 - 50,000 دج</option>
+            <option value="50001-100000">50,001 - 100,000 دج</option>
+            <option value="100001-200000">100,001 - 200,000 دج</option>
+            <option value="200001-500000">200,001 دج+</option>
+          </select>
         </div>
       </header>
 
-      <!-- منتجات مختارة -->
-      <section class="mb-12">
-        <h2 class="text-2xl font-semibold mb-4">⭐ منتجات مختارة</h2>
-        <div id="featuredCarousel" class="carousel"></div>
-      </section>
-
-      <!-- عروض اليوم -->
+      <!-- أفضل العروض -->
       <section>
-        <h2 class="text-2xl font-semibold mb-6">🔥 عروض اليوم</h2>
-        <div id="offers" class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"></div>
+        <h2 class="text-2xl font-semibold mb-4">🔥 أفضل العروض</h2>
+        <div id="offersSection" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8"></div>
       </section>
 
       <footer class="text-xs text-gray-400 mt-12">
@@ -146,124 +173,56 @@
     </main>
   </div>
 
-  <!-- Firebase + وظائف -->
+  <!-- Firebase + Scripts -->
   <script type="module">
     import { auth, db } from "./firebase-config.js";
-    import { collection, getDocs } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
     import { onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
+    import { collection, getDocs } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
 
-    // Sidebar toggle
-    const toggle = (btnClass, subClass) => {
-      const btn = document.querySelector(btnClass);
-      const sub = document.querySelector(subClass);
-      const chev = btn.querySelector('.chev');
-      btn.addEventListener('click', () => {
-        sub.classList.toggle('hidden');
-        chev.classList.toggle('open');
-      });
-    };
-    toggle('.pc-toggle', '.pc-submenu');
-    toggle('.phone-toggle', '.phone-submenu');
-    toggle('.acc-toggle', '.acc-submenu');
+    const offersSection = document.getElementById("offersSection");
+    const searchInput = document.getElementById("searchInput");
+    const categoryFilter = document.getElementById("categoryFilter");
+    const conditionFilter = document.getElementById("conditionFilter");
+    const priceFilter = document.getElementById("priceFilter");
 
-    // Auth elements
-    const signupBtn = document.getElementById("signupBtn");
-    const loginBtn = document.getElementById("loginBtn");
-    const userMenu = document.getElementById("userMenu");
-    const userBtn = document.getElementById("userBtn");
-    const userDropdown = document.getElementById("userDropdown");
-    const userName = document.getElementById("userName");
+    const userNameHeader = document.getElementById("userNameHeader");
     const userAvatar = document.getElementById("userAvatar");
+    const authBtns = document.getElementById("authBtns");
+    const userDropdown = document.getElementById("userDropdown");
+    const userBtn = document.getElementById("userBtn");
     const logoutBtn = document.getElementById("logoutBtn");
 
-    // التحقق من تسجيل الدخول
-    onAuthStateChanged(auth, (user) => {
+    let allProducts = [];
+
+    // ✅ التحقق من تسجيل الدخول
+    onAuthStateChanged(auth, async (user) => {
       if (user) {
-        signupBtn.classList.add("hidden");
-        loginBtn.classList.add("hidden");
-        userMenu.classList.remove("hidden");
-        userName.textContent = user.displayName || user.email.split("@")[0];
+        authBtns.classList.add("hidden");
+        userNameHeader.textContent = user.displayName || "زبون";
         userAvatar.src = user.photoURL || "./assets/default-avatar.png";
       } else {
-        signupBtn.classList.remove("hidden");
-        loginBtn.classList.remove("hidden");
-        userMenu.classList.add("hidden");
+        authBtns.classList.remove("hidden");
+        userNameHeader.textContent = "";
+        userAvatar.src = "./assets/default-avatar.png";
       }
     });
 
-    // Dropdown user
+    // Dropdown User Menu
     userBtn.addEventListener("click", () => userDropdown.classList.toggle("hidden"));
-
-    // Logout
     logoutBtn.addEventListener("click", async () => {
       await signOut(auth);
-      userDropdown.classList.add("hidden");
-      alert("تم تسجيل الخروج بنجاح!");
+      window.location.reload();
     });
 
-    // تحميل المنتجات
-    const offersSection = document.getElementById("offers");
-    const featuredCarousel = document.getElementById("featuredCarousel");
-
+    // جلب المنتجات من Firebase
     async function loadProducts() {
       const snapshot = await getDocs(collection(db, "approved_products"));
+      allProducts = snapshot.docs.map(docSnap => ({ id: docSnap.id, ...docSnap.data() }));
+
+      displayProducts(allProducts);
+    }
+
+    function displayProducts(products) {
       offersSection.innerHTML = "";
-      featuredCarousel.innerHTML = "";
-      if (snapshot.empty) {
-        offersSection.innerHTML = "<p class='text-center text-gray-400 col-span-full'>لا توجد عروض حالياً.</p>";
-        return;
-      }
-      snapshot.forEach((docSnap, i) => {
-        const p = docSnap.data();
-        const statusText = p.condition === "new"
-          ? `<span class='status-new'>(جديد)</span>`
-          : `<span class='status-used'>(مستعمل - ${p.usageDuration})</span>`;
-        const ratingStars = "⭐".repeat(p.rating || 4);
-
-        const card = `
-          <div class="bg-white/10 rounded-2xl overflow-hidden shadow-lg hover:scale-105 transition transform">
-            <img src="${p.image1 || './assets/default-product.jpg'}" alt="${p.name}" class="w-full h-48 object-cover">
-            <div class="p-4">
-              <h3 class="text-lg font-semibold mb-1 flex items-center">${p.name} ${statusText}</h3>
-              <p class="text-sm text-gray-300 mb-2 truncate">${p.desc}</p>
-              <div class="flex items-center justify-between">
-                <span class="text-yellow-400 font-bold">${p.price} دج</span>
-                <span class="text-sm">${ratingStars}</span>
-              </div>
-              <a href="https://wa.me/${p.whatsapp}" target="_blank"
-                 class="block mt-3 text-center bg-green-500 hover:bg-green-600 text-white py-2 rounded-lg transition">
-                 💬 تواصل عبر واتساب
-              </a>
-            </div>
-          </div>`;
-        offersSection.insertAdjacentHTML("beforeend", card);
-
-        if (i < 6) {
-          featuredCarousel.insertAdjacentHTML("beforeend", `
-            <div class="carousel-item">
-              <img src="${p.image1 || './assets/default-product.jpg'}" class="w-full h-40 object-cover" alt="${p.name}">
-              <div class="p-3">
-                <h3 class="text-sm font-semibold mb-1">${p.name} ${statusText}</h3>
-                <p class="text-yellow-400 font-bold">${p.price} دج</p>
-              </div>
-            </div>
-          `);
-        }
-      });
-    }
-
-    function autoScrollCarousel() {
-      const scrollAmount = 1;
-      setInterval(() => {
-        featuredCarousel.scrollLeft += scrollAmount;
-        if (featuredCarousel.scrollLeft >= featuredCarousel.scrollWidth - featuredCarousel.clientWidth) {
-          featuredCarousel.scrollLeft = 0;
-        }
-      }, 30);
-    }
-
-    await loadProducts();
-    autoScrollCarousel();
-  </script>
-</body>
-</html>
+      if (!products.length) {
+        offersSection.innerHTML = "<p class='text
